explore travel section check

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <li><a href="">Packages</a></li>
               <li><a href="">Testimonial</a></li>
               <li><a href="">Blog</a></li>
-              <li><a href="">Contact</a></li>
+              <li class="right"><a href="">Contact</a></li>
             </ul>
           </div>
           <div class="menuHB">
@@ -53,7 +53,7 @@
                         <select name="type" id="">
                             <option value="Type">Type</option>
                         </select>
-                        <button><img src="Images/search.png" alt="">Find Now</button>
+                        <button><img src="Images/search.png" alt=""> Find Now</button>
                     </div>
                 </div>
             </div>
