Destination section added

--- a/index.html
+++ b/index.html
@@ -64,39 +64,67 @@
       </section>
       <section class="popular-tour">
         <div class="container">
-            <div class="popular">
-                <div class="popular-text">
-                  <h1>Our Popular Tours</h1>
-                  <p>
-                    Dolor sit amet consectetur. Diam volutpat neque habitasse
-                    pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
-                  </p>
-                  <ul>
-                    <li>
-                      Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-                      nullam odio neque diam. Sociis erat at .
-                    </li>
-                    <li>
-                      Adipiscing ornare pellentesque mauris volutpat tortor vitae
-                      platea porta lacus. Lectus suspendisse nullam.
-                    </li>
-                    <li>
-                      Accumsan eget et turpis praesent lorem egestas enim elit
-                      bibendum. Risus at in.
-                    </li>
-                  </ul>
-                  <p>
-                    Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim
-                    adipiscing quis. Habitant adipiscing risus natoque aliquet. Id
-                    bibendum nunc senectus semper tincidunt.
-                  </p>
-                  <button>Read More</button>
-                </div>
-                <div class="popular-img">
-                    <img src="Images/Rectangle 4.png" alt="">
-                </div>
-              </div>
+          <div class="popular">
+            <div class="popular-text">
+              <h1>Our Popular Tours</h1>
+              <p>
+                Dolor sit amet consectetur. Diam volutpat neque habitasse
+                pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+              </p>
+              <ul>
+                <li>
+                  Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+                  nullam odio neque diam. Sociis erat at .
+                </li>
+                <li>
+                  Adipiscing ornare pellentesque mauris volutpat tortor vitae
+                  platea porta lacus. Lectus suspendisse nullam.
+                </li>
+                <li>
+                  Accumsan eget et turpis praesent lorem egestas enim elit
+                  bibendum. Risus at in.
+                </li>
+              </ul>
+              <p>
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing risus natoque aliquet. Id bibendum
+                nunc senectus semper tincidunt.
+              </p>
+              <button>Read More</button>
+            </div>
+            <div class="popular-img">
+              <img src="Images/Rectangle 4.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="destinations">
+        <div class="container">
+          <div class="destination">
+            <center>
+              <h1>Choose Your Destination</h1>
+              <p>
+                Dolor sit amet consectetur. Diam volutpat neque habitasse
+                pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+              </p>
+            </center>
+          </div>
+          <div class="destination-img">
+            <div class="row1">
+              <div class="place val1">Maldives</div>
+              <div class="place val2">Indonesia</div>
+            </div>
+            <div class="row2">
+              <div class="place val3">Srilanka</div>
+              <div class="place val4">North America</div>
+              <div class="place val5">Kashmir</div>
+            </div>
+            <div class="row3">
+              <div class="place val6">Bangladesh</div>
+              <div class="place val7">Bandarban</div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
