--- a/index.html
+++ b/index.html
@@ -127,6 +127,35 @@
           </div>
         </div>
       </section>
+      <section class="choose-us">
+        <div class="container">
+          <div class="choose">
+            <center>
+              <h1>Why Choose Us</h1>
+              <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </center>
+            <div class="card-row1">
+              <div class="hotels card">
+                <img src="Images/hotel 1.svg" alt="">
+                <h3>Handpicked Hotels</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+              </div>
+              <div class="service card">
+                <img src="Images/map 1.svg" alt="">
+                <h3>World Class Service</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+              </div>
+            </div>
+            <div class="card-row2">
+              <div class="guarantee card">
+                <img src="Images/price-tag 1.svg" alt="">
+                <h3>Best Price Guarantee</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
