deals and discount section added

--- a/index.html
+++ b/index.html
@@ -156,6 +156,90 @@
           </div>
         </div>
       </section>
+      <section class="deals-discount">
+        <div class="container">
+          <div class="deals">
+            <center>
+              <h1>Deals & Discounts</h1>
+               <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </center>
+            
+          </div>
+          <div class="deal-card">
+            <div class="img1">
+              <div class="img-card">
+                <div class="img-head">
+                  <div class="time">
+                    <img src="Images/d1.svg" alt="">
+                    <p>7 Day / 6 Night</p>
+                  </div>
+                  <div class="max">
+                    <img src="Images/d2.svg" alt="">
+                    <p>Max : 10</p>
+                  </div>
+                  <div class="loc">
+                    <img src="Images/d3.svg" alt="">
+                    <p>Malaysia</p>
+                  </div>
+                </div>
+                <h1>Tour To Satorini</h1>
+                <p>Amet consectetur. Vulputate commodo felis 
+                  molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                <h3>Price: $1300-$1500</h3>
+                <button>Book Now</button>
+              </div>
+            </div>
+
+            <div class="img2">
+              <div class="img-card">
+                <div class="img-head">
+                  <div class="time">
+                    <img src="Images/d1.svg" alt="">
+                    <p>7 Day / 6 Night</p>
+                  </div>
+                  <div class="max">
+                    <img src="Images/d2.svg" alt="">
+                    <p>Max : 10</p>
+                  </div>
+                  <div class="loc">
+                    <img src="Images/d3.svg" alt="">
+                    <p>Malaysia</p>
+                  </div>
+                </div>
+                <h1>Tour To Satorini</h1>
+                <p>Amet consectetur. Vulputate commodo felis 
+                  molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                <h3>Price: $1300-$1500</h3>
+                <button>Book Now</button>
+              </div>
+            </div>
+
+            <div class="img3">
+              <div class="img-card">
+                <div class="img-head">
+                  <div class="time">
+                    <img src="Images/d1.svg" alt="">
+                    <p>7 Day / 6 Night</p>
+                  </div>
+                  <div class="max">
+                    <img src="Images/d2.svg" alt="">
+                    <p>Max : 10</p>
+                  </div>
+                  <div class="loc">
+                    <img src="Images/d3.svg" alt="">
+                    <p>Malaysia</p>
+                  </div>
+                </div>
+                <h1>Tour To Satorini</h1>
+                <p>Amet consectetur. Vulputate commodo felis 
+                  molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                <h3>Price: $1300-$1500</h3>
+                <button>Book Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
