Get lost section added

--- a/index.html
+++ b/index.html
@@ -238,6 +238,28 @@
               </div>
             </div>
           </div>
+          <div class="all-package">
+            <center><button>See All Packages</button></center>
+          </div>
+        </div>
+      </section>
+
+      <section class="get-lost">
+        <div class="container">
+          <div class="lost">
+            <div class="text">
+              <h1>A Simple Perfect Place To Get Lost</h1>
+              <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+              <ul><b>
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li></b>
+              </ul>
+              <button>See More</button>
+            </div>
+            <div class="video">
+              <iframe width="610px" height="424px" src="https://www.youtube.com/embed/_e_hEWZP8mU?si=_N8iZBR9RgCo71pS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </section>
     </main>
