--- a/index.html
+++ b/index.html
@@ -257,8 +257,30 @@
               <button>See More</button>
             </div>
             <div class="video">
-              <iframe width="610px" height="424px" src="https://www.youtube.com/embed/_e_hEWZP8mU?si=_N8iZBR9RgCo71pS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="610px" height="424px" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=6_hNbSM-K5hF5Elk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="newsletter">
+        <div class="container">
+          <div class="subscribe">
+            <div class="inputs">
+              <h3>
+                Newsletter
+              </h3>
+              <p>Get your daily dose of travel news & tips. Sign up today!</p>
+              <hr>
+              <input type="text" name="" id="" placeholder="Enter your name"><br>
+              <input type="email" name="" id="" placeholder="Enter your email"><br>
+              <button>
+                Subscribe
+              </button>
+            </div>
+            <div class="save">
+              <img src="Images/Rectangle 8 (1).png" alt="">
+            </div>
+            
           </div>
         </div>
       </section>
