--- a/index.html
+++ b/index.html
@@ -285,6 +285,19 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="foot">
+        <div class="logo logoP">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h1>AdvenTour <span>Travel</span></h1>
+        </div>
+        <p class="footP">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <div class="social">
+          <img src="Images/Social.svg" alt="">
+        </div>
+        <hr class="footH">
+        <p>2017, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
