--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
           <div class="menu">
             <ul>
-              <li><a href="">Home</a></li>
+              <li><a href="" class="home">Home</a></li>
               <li><a href="">Packages</a></li>
               <li><a href="">Testimonial</a></li>
               <li><a href="">Blog</a></li>
