meaningful text added

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
           <div class="explore">
             <h1>Explore Your Travel</h1>
             <p>
-              Dolor sit amet consectetur. Nullam suspendisse vitae ultricies
-              dolor adipiscing. In et odio enim ac quis sapien urna eu
-              phasellus.
+              Discover the world with AdvenTour Travel – where every journey is an adventure waiting to unfold. Let us be your guide to unforgettable destinations and extraordinary experiences.
             </p>
             <div class="find">
               <input type="text" placeholder="Where go" />
@@ -68,28 +66,21 @@
             <div class="popular-text">
               <h1>Our Popular Tours</h1>
               <p>
-                Dolor sit amet consectetur. Diam volutpat neque habitasse
-                pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+                Explore our Popular Tours, handpicked for extraordinary experiences and unforgettable memories.
               </p>
               <ul>
                 <li>
-                  Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-                  nullam odio neque diam. Sociis erat at .
+                  Uncover the rich heritage and traditions of diverse destinations.
                 </li>
                 <li>
-                  Adipiscing ornare pellentesque mauris volutpat tortor vitae
-                  platea porta lacus. Lectus suspendisse nullam.
+                  Embark on adrenaline-pumping activities for the ultimate thrill-seeker.
                 </li>
                 <li>
-                  Accumsan eget et turpis praesent lorem egestas enim elit
-                  bibendum. Risus at in.
+                  Indulge in opulence with our curated selection of lavish getaways.
                 </li>
               </ul>
               <p>
-                Amet consectetur. Vulputate commodo felis molestie risus ornare
-                nulla amet et. Libero commodo sagittis dignissim adipiscing
-                quis. Habitant adipiscing risus natoque aliquet. Id bibendum
-                nunc senectus semper tincidunt.
+                Choose AdvenTour Travel's Popular Tours for a journey beyond the ordinary, where every moment becomes a cherished chapter in your travel story.
               </p>
               <button>Read More</button>
             </div>
@@ -105,8 +96,7 @@
             <center>
               <h1>Choose Your Destination</h1>
               <p>
-                Dolor sit amet consectetur. Diam volutpat neque habitasse
-                pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+                Explore diverse destinations with AdvenTour Travel. Your adventure starts here – choose your destination and let the exploration begin!
               </p>
             </center>
           </div>
@@ -132,25 +122,25 @@
           <div class="choose">
             <center>
               <h1>Why Choose Us</h1>
-              <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+              <p>Choose AdvenTour Travel for personalized journeys that transcend the ordinary. Our commitment to seamless travel and unique experiences makes us your perfect companion in crafting unforgettable memories.</p>
             </center>
             <div class="card-row1">
               <div class="hotels card">
                 <img src="Images/hotel 1.svg" alt="">
                 <h3>Handpicked Hotels</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                <p>Elevate your stay with our Handpicked Hotels—curated for luxury, comfort, and style. AdvenTour Travel, where every hotel is a destination. </p>
               </div>
               <div class="service card">
                 <img src="Images/map 1.svg" alt="">
                 <h3>World Class Service</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                <p>Experience unparalleled hospitality with our World-Class Service. From personalized assistance to seamless experiences, we redefine luxury travel at every turn. </p>
               </div>
             </div>
             <div class="card-row2">
               <div class="guarantee card">
                 <img src="Images/price-tag 1.svg" alt="">
                 <h3>Best Price Guarantee</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                <p>Unlock peace of mind with our Best Price Guarantee. Book confidently, knowing you've secured the most competitive rates for your journey.</p>
               </div>
             </div>
           </div>
@@ -161,7 +151,7 @@
           <div class="deals">
             <center>
               <h1>Deals & Discounts</h1>
-               <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+               <p>Discover unbeatable savings with our Deals & Discounts. Elevate your travel experience while enjoying exclusive offers tailored for your next adventure.</p>
             </center>
             
           </div>
@@ -179,13 +169,12 @@
                   </div>
                   <div class="loc">
                     <img src="Images/d3.svg" alt="">
-                    <p>Malaysia</p>
+                    <p>Bali, Indonesia</p>
                   </div>
                 </div>
-                <h1>Tour To Satorini</h1>
-                <p>Amet consectetur. Vulputate commodo felis 
-                  molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
-                <h3>Price: $1300-$1500</h3>
+                <h1>Bali Bliss Retreat</h1>
+                <p>Escape to the tranquility of Bali with a 5-day retreat. Immerse yourself in the island's rich culture, relax on pristine beaches, and discover hidden gems.</p>
+                <h3>Price: $1200-$1400</h3>
                 <button>Book Now</button>
               </div>
             </div>
@@ -199,16 +188,15 @@
                   </div>
                   <div class="max">
                     <img src="Images/d2.svg" alt="">
-                    <p>Max : 10</p>
+                    <p>Max : 9</p>
                   </div>
                   <div class="loc">
                     <img src="Images/d3.svg" alt="">
-                    <p>Malaysia</p>
+                    <p>Tokyo, Japan</p>
                   </div>
                 </div>
-                <h1>Tour To Satorini</h1>
-                <p>Amet consectetur. Vulputate commodo felis 
-                  molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                <h1>Tokyo Discovery Journey</h1>
+                <p>Embark on a 7-day adventure in the heart of Tokyo. Experience the vibrant culture, modern wonders, and traditional charm that make Tokyo an unforgettable destination.</p>
                 <h3>Price: $1300-$1500</h3>
                 <button>Book Now</button>
               </div>
@@ -219,21 +207,20 @@
                 <div class="img-head">
                   <div class="time">
                     <img src="Images/d1.svg" alt="">
-                    <p>7 Day / 6 Night</p>
+                    <p>12 Day / 11 Night</p>
                   </div>
                   <div class="max">
                     <img src="Images/d2.svg" alt="">
-                    <p>Max : 10</p>
+                    <p>Max : 12</p>
                   </div>
                   <div class="loc">
                     <img src="Images/d3.svg" alt="">
-                    <p>Malaysia</p>
+                    <p>Maasai Mara, Kenya</p>
                   </div>
                 </div>
-                <h1>Tour To Satorini</h1>
-                <p>Amet consectetur. Vulputate commodo felis 
-                  molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
-                <h3>Price: $1300-$1500</h3>
+                <h1>Safari Adventure in Maasai Mara</h1>
+                <p>Embark on a 12-day safari adventure in the iconic Maasai Mara. Witness the breathtaking wildlife, explore vast landscapes, and experience the magic of Africa.</p>
+                <h3>Price: $3000-$3500</h3>
                 <button>Book Now</button>
               </div>
             </div>
@@ -249,10 +236,10 @@
           <div class="lost">
             <div class="text">
               <h1>A Simple Perfect Place To Get Lost</h1>
-              <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+              <p>ANestled in nature's embrace, our haven is a simple, perfect place to get lost. Unwind in tranquility, surrounded by lush landscapes and serene vistas. </p>
               <ul><b>
-                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li></b>
+                <li>Embrace the soothing ambiance, where every corner whispers tales of nature's beauty.</li>
+                <li>Find solace in the peace of our hidden gem, away from the hustle, a perfect escape for mindful relaxation.</li></b>
               </ul>
               <button>See More</button>
             </div>
@@ -291,7 +278,7 @@
           <img src="Images/Group 40071 (2).png" alt="" />
           <h1>AdvenTour <span>Travel</span></h1>
         </div>
-        <p class="footP">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <p class="footP">Discover boundless horizons with AdvenTour Travel. Your gateway to curated experiences, exceptional service, and memories that last a lifetime. Start your journey today! </p>
         <div class="social">
           <img src="Images/Social.svg" alt="">
         </div>
